--- a/code/API_definitions/device-reachability-status.yaml
+++ b/code/API_definitions/device-reachability-status.yaml
@@ -13,7 +13,10 @@ info:
     ## Relevant terms and definitions
 
     * **Device**: A device refers to any physical entity that can connect to a network and participate in network communication.
-      At least one identifier for the device (user equipment) out of four options: IPv4 address, IPv6 address, Phone number, or Network Access Identifier (not supported for this API version) assigned by the mobile network operator for the device.
+
+        At least one identifier for the device (user equipment) out of four options must be provided: IPv4 address, IPv6 address, Phone number, or Network Access Identifier assigned by the mobile network operator for the device. Where more than one device identifier is provided, only one identifier will be selected by the implementation and this choice indicated to the API consumer in the session creation response.
+
+        Note: Network Access Identifier is defined for future use and will not be supported with this version of the API.
 
     * **Reachable:** Indicates, if the device is reachable from the network or not.
 
@@ -115,23 +118,29 @@ paths:
               schema:
                 $ref: "#/components/schemas/ReachabilityStatusResponse"
               examples:
-                Connected-With-SMS:
+                Reachable Using SMS:
                   value:
                     lastStatusTime: "2024-02-20T10:41:38.657Z"
                     reachable: true
                     connectivity: ["SMS"]
-                Connected-With-DATA:
+                Reachable Using SMS With Device Disambguation:
+                  value:
+                    device:
+                      phoneNumber: "+123456789"
+                    lastStatusTime: "2024-02-20T10:41:38.657Z"
+                    reachable: true
+                    connectivity: ["SMS"]
+                Reachable Using data:
                   value:
                     lastStatusTime: "2024-02-20T10:41:38.657Z"
                     reachable: true
                     connectivity: ["DATA"]
-
-                Connected-With-DATA-And-SMS:
+                Reachable Using data and SMS:
                   value:
                     lastStatusTime: "2024-02-20T10:41:38.657Z"
                     reachable: true
                     connectivity: ["DATA", "SMS"]
-                Not-Reachable:
+                Not Reachable Over The Mobile Network:
                   value:
                     lastStatusTime: "2024-02-20T10:41:38.657Z"
                     reachable: false
@@ -176,12 +185,15 @@ components:
       type: string
       format: date-time
       example: "2024-02-20T10:41:38.657Z"
+
     ReachabilityStatusResponse:
       type: object
       required:
         - lastStatusTime
         - reachable
       properties:
+        device:
+          $ref: "#/components/schemas/DeviceResponse"
         lastStatusTime:
           $ref: "#/components/schemas/LastStatusTime"
         reachable:
@@ -191,6 +203,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/ConnectivityType"
+
     ConnectivityType:
       description: |
         DATA: The device is connected to the network for Data usage (regardless of the SMS reachability)
@@ -201,6 +214,7 @@ components:
       enum:
         - DATA
         - SMS
+
     Device:
       description: |
         End-user equipment able to connect to a mobile network. Examples of devices include smartphones or IoT sensors/actuators.
@@ -224,6 +238,16 @@ components:
         ipv6Address:
           $ref: "#/components/schemas/DeviceIpv6Address"
       minProperties: 1
+
+    DeviceResponse:
+      description: |
+        An identifier for the end-user equipment able to connect to the network that the response refers to. This parameter is only returned when the API consumer includes the `device` parameter in their request (i.e. they are using a two-legged access token), and is relevant when more than one device identifier is specified, as only one of those device identifiers is allowed in the response.
+
+        If the API consumer provides more than one device identifier in their request, the API provider must return a single identifier which is the one they are using to fulfil the request, even if the identifiers do not match the same device. API provider does not perform any logic to validate/correlate that the indicated device identifiers match the same device. No error should be returned if the identifiers are otherwise valid to prevent API consumers correlating different identifiers with a given end user.
+
+      allOf:
+        - $ref: "#/components/schemas/Device"
+        - maxProperties: 1
 
     PhoneNumber:
       description: A public identifier addressing a telephone subscription. In mobile networks it corresponds to the MSISDN (Mobile Station International Subscriber Directory Number). In order to be globally unique it has to be formatted in international format, according to E.164 standard, prefixed with '+'.
@@ -430,18 +454,11 @@ components:
                       - 422
                   code:
                     enum:
-                      - IDENTIFIER_MISMATCH
                       - SERVICE_NOT_APPLICABLE
                       - MISSING_IDENTIFIER
                       - UNSUPPORTED_IDENTIFIER
                       - UNNECESSARY_IDENTIFIER
           examples:
-            GENERIC_422_IDENTIFIER_MISMATCH:
-              description: Inconsistency between identifiers not pointing to the same device
-              value:
-                status: 422
-                code: IDENTIFIER_MISMATCH
-                message: Provided identifiers are not consistent.
             GENERIC_422_SERVICE_NOT_APPLICABLE:
               description: Service not applicable for the provided identifier
               value:
