--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -33,7 +33,7 @@ info:
 
       - ``org.camaraproject.device-reachability-status-subscriptions.v0.reachability-disconnected``: Event triggered when the device is not connected.
 
-    Note: Additionally to these list, ``org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ends`` notification `type` is sent when the subscription ends.
+    Note: Additionally to these list, ``org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ended`` notification `type` is sent when the subscription is terminated.
     This notification does not require dedicated subscription.
 
     It is used in following cases:
@@ -176,7 +176,7 @@ paths:
                         $ref: "#/components/examples/REACHABILITY_SMS"
                       reachability-disconnected:
                         $ref: "#/components/examples/REACHABILITY_DISCONNECTED"
-                      subscription-ends:
+                      subscription-ended:
                         $ref: "#/components/examples/SUBSCRIPTION_ENDS"
               responses:
                 "204":
@@ -591,12 +591,12 @@ components:
 
         reachability-disconnected - Event triggered when the device is not connected.
 
-        subscription-ends - Event triggered when the subscription is terminated
+        subscription-ended - Event triggered when the subscription is terminated
       enum:
         - org.camaraproject.device-reachability-status-subscriptions.v0.reachability-data
         - org.camaraproject.device-reachability-status-subscriptions.v0.reachability-sms
         - org.camaraproject.device-reachability-status-subscriptions.v0.reachability-disconnected
-        - org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ends
+        - org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ended
 
     SubscriptionEventType:
       type: string
@@ -826,7 +826,7 @@ components:
           org.camaraproject.device-reachability-status-subscriptions.v0.reachability-data: "#/components/schemas/EventReachabilityData"
           org.camaraproject.device-reachability-status-subscriptions.v0.reachability-sms: "#/components/schemas/EventReachabilitySms"
           org.camaraproject.device-reachability-status-subscriptions.v0.reachability-disconnected: "#/components/schemas/EventReachabilityDisconnected"
-          org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ends: "#/components/schemas/EventSubscriptionEnds"
+          org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ended: "#/components/schemas/EventSubscriptionEnds"
 
     Source:
       type: string
@@ -902,7 +902,7 @@ components:
               $ref: "#/components/schemas/SubscriptionEnds"
 
     SubscriptionEnds:
-      description: Event detail structure for org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ends event
+      description: Event detail structure for org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ended event
       type: object
       required:
         - terminationReason
@@ -1505,7 +1505,7 @@ components:
       value:
         id: "123658"
         source: https://notificationSendServer12.supertelco.com
-        type: org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ends
+        type: org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ended
         specversion: "1.0"
         datacontenttype: application/json
         data:
