--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -177,7 +177,7 @@ paths:
                       reachability-disconnected:
                         $ref: "#/components/examples/REACHABILITY_DISCONNECTED"
                       subscription-ended:
-                        $ref: "#/components/examples/SUBSCRIPTION_ENDS"
+                        $ref: "#/components/examples/SUBSCRIPTION_ENDED"
               responses:
                 "204":
                   description: Successful notification
@@ -822,7 +822,7 @@ components:
           org.camaraproject.device-reachability-status-subscriptions.v0.reachability-data: "#/components/schemas/EventReachabilityData"
           org.camaraproject.device-reachability-status-subscriptions.v0.reachability-sms: "#/components/schemas/EventReachabilitySms"
           org.camaraproject.device-reachability-status-subscriptions.v0.reachability-disconnected: "#/components/schemas/EventReachabilityDisconnected"
-          org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ended: "#/components/schemas/EventSubscriptionEnds"
+          org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ended: "#/components/schemas/EventSubscriptionEnded"
 
     Source:
       type: string
@@ -888,16 +888,16 @@ components:
         subscriptionId:
           $ref: "#/components/schemas/SubscriptionId"
 
-    EventSubscriptionEnds:
-      description: event structure for event subscription ends
+    EventSubscriptionEnded:
+      description: Event structure for sending subscription-ended event
       allOf:
         - $ref: "#/components/schemas/CloudEvent"
         - type: object
           properties:
             data:
-              $ref: "#/components/schemas/SubscriptionEnds"
+              $ref: "#/components/schemas/SubscriptionEnded"
 
-    SubscriptionEnds:
+    SubscriptionEnded:
       description: Event detail structure for org.camaraproject.device-reachability-status-subscriptions.v0.subscription-ended event
       type: object
       required:
@@ -1502,7 +1502,7 @@ components:
           subscriptionId: qs15-h556-rt89-1298
         time: "2023-01-19T13:18:23.682Z"
 
-    SUBSCRIPTION_ENDS:
+    SUBSCRIPTION_ENDED:
       value:
         id: "123658"
         source: https://notificationSendServer12.supertelco.com
