--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -1592,7 +1592,7 @@ components:
         time: "2023-01-19T13:18:23.682Z"
 
     SUBSCRIPTION_ENDED:
-      description: The cloud event when a device reacheability status subscription ends.
+      description: The cloud event when a device reachability status subscription ends.
       value:
         id: "123658"
         source: https://notificationSendServer12.supertelco.com
@@ -1608,11 +1608,11 @@ components:
         time: "2024-03-22T05:40:23.682Z"
 
     SUBSCRIPTION_STARTED:
-      description: The cloud event when a device reacheability status subscription was started.
+      description: The cloud event when a device reachability status subscription was started.
       value:
         id: "124003"
         source: https://notificationSendServer12.supertelco.com
-        type: org.camaraproject.device-reacheability-status-subscriptions.v0.subscription-started
+        type: org.camaraproject.device-reachability-status-subscriptions.v0.subscription-started
         specversion: "1.0"
         datacontenttype: application/json
         data:
@@ -1623,11 +1623,11 @@ components:
         time: "2024-03-05T15:00:23.682Z"
 
     SUBSCRIPTION_UPDATED:
-      description: The cloud event when a device reacheability status subscription was updated.
+      description: The cloud event when a device reachability status subscription was updated.
       value:
         id: "124773"
         source: https://notificationSendServer12.supertelco.com
-        type: org.camaraproject.device-reacheability-status-subscriptions.v0.subscription-updated
+        type: org.camaraproject.device-reachability-status-subscriptions.v0.subscription-updated
         specversion: "1.0"
         datacontenttype: application/json
         data:
