--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -123,14 +123,14 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.8.0
+  version: wip
   x-camara-commonalities: 0.6
 externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/DeviceReachabilityStatus
 
 servers:
-  - url: "{apiRoot}/device-reachability-status-subscriptions/v0.8"
+  - url: "{apiRoot}/device-reachability-status-subscriptions/vwip"
     variables:
       apiRoot:
         default: http://localhost:9091
